--- a/Startseite.html
+++ b/Startseite.html
@@ -28,7 +28,7 @@
 				"https://www.instagram.com/flo_zilk/"
 		]
 }</script>
-    <meta name="theme-color" content="#95ccc3">
+    <meta name="theme-color" content="#ff7f00">
     <meta property="og:title" content="Startseite">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
@@ -395,9 +395,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         <div class="u-clearfix u-expanded-width u-gutter-30 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
-              <div class="u-align-center-sm u-align-center-xs u-align-left-md u-align-left-xl u-container-style u-layout-cell u-left-cell u-size-20 u-size-30-md u-layout-cell-1">
+              <div class="u-align-center-sm u-align-center-xs u-align-left-md u-align-left-xl u-container-align-left-sm u-container-align-left-xs u-container-style u-layout-cell u-left-cell u-size-20 u-size-30-md u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1"><!--position-->
-                  <div data-position="" class="u-position u-position-1"><!--block-->
+                  <div data-position="" class="u-align-left-sm u-align-left-xs u-position u-position-1"><!--block-->
                     <div class="u-block">
                       <div class="u-block-container u-clearfix"><!--block_header-->
                         <h5 class="u-block-header u-text"><!--block_header_content-->
@@ -511,9 +511,31 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   margin: 0 auto 0 0;
 }
 
+@media (max-width: 1199px) {
+  .u-cookies-consent .u-sheet-1 {
+    min-height: 131px;
+  }
+
+  .u-cookies-consent .u-layout-cell-1 {
+    min-height: 125px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 0;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-cookies-consent .u-layout-cell-2 {
+    min-height: 125px;
+  }
+}
+
 @media (max-width: 991px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 187px;
+    min-height: 106px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
@@ -523,10 +545,6 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   .u-cookies-consent .u-container-layout-1 {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .u-cookies-consent .u-text-2 {
-    margin-right: 0;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
@@ -560,15 +578,33 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 121px;
+    min-height: 212px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-1 {
+    padding-bottom: 30px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 20px;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 20px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 15px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-2 {
+    padding: 30px;
   }
 }</style></section>
   
