--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "zilkcoaching",
-		"logo": "images/Zilk_Coaching_WEISS.png",
+		"logo": "np://user.desktop.nicepage.com/Site_525904919/images/Zilk_Coaching_WEISS.png?rand=3606",
 		"sameAs": [
 				"https://www.instagram.com/flo_zilk/",
 				"https://www.instagram.com/flo_zilk/"
@@ -34,7 +34,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-xl-mode" data-lang="de"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-80 u-header u-header" id="sec-cdb9"><div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246">
-          <img src="images/Zilk_Coaching_WEISS.png" class="u-logo-image u-logo-image-1">
+          <img src="np://user.desktop.nicepage.com/Site_525904919/images/Zilk_Coaching_WEISS.png?rand=3606" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="@flo_zilk" target="_blank" href="https://www.instagram.com/flo_zilk/"><span class="u-icon u-social-icon u-social-instagram u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4047"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-4047"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
@@ -75,102 +75,91 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-section-1" id="carousel_b684">
-      <div class="u-expanded-width u-shape u-shape-rectangle u-white u-shape-1"></div>
-      <img src="images/rsz_flozilk-40.jpg" alt="" class="u-image u-image-default u-image-1" data-image-width="4829" data-image-height="6036" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250">
-      <div class="u-container-style u-grey-80 u-group u-group-1">
-        <div class="u-container-layout u-container-layout-1">
-          <h3 class="u-text u-text-1"> Mein Name ist <span class="u-text-palette-1-base">Flo Zilk</span> und ich bin leidenschaftlicher <span class="u-text-palette-1-base">Athlet </span>und <span class="u-text-palette-1-base">Coach </span>im Bodybuilding Bereich. <br>
-          </h3>
-          <p class="u-large-text u-text u-text-variant u-text-2"> Seit 2020 coache ich ambitionierte Menschen im Bereich Muskelaufbau, Fettabbau und Wettkampfvorbereitung und führe sie Hand in Hand mit meinem Wissen und meinen Erfahrungen zu ihren persönlichen Zielen.&nbsp; </p>
-        </div>
-      </div>
-      <a href="About.html#carousel_d884" class="u-align-left u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-light-2 u-palette-1-base u-radius-50 u-btn-1">Meine Form</a>
-    </section>
-    <section class="u-align-center u-clearfix u-section-2" id="carousel_0503">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-left u-text u-text-1">Mein Background</h2>
-        <p class="u-align-left u-text u-text-2"> Durch jahrelanges Selbststudium, in denen ich viele Sachen an mir selbst immer wieder ausprobiert habe und mich zusätzlich durchgehend selbst coachen lassen habe, hat sich mein Horizont enorm erweitert.&nbsp;<br>
-          <br>Indem ich die Trainer Ausbildung zum lizenzierten <span class="u-text-palette-1-base">Diplom Strength Coach</span> im "Das Gym" in Wien absolvierte und eine weitere bevorstehende Ausbildung zum lizenzierten Ernährungsberater durch die Mac Nutrition University absolviere, bin ich in der Lage, meinen Mitgliedern in meinem Coaching Team stets mit dem besten und aktuellsten Wissen in den Bereichen Training und Ernährung weiterzuhelfen. <br>
-          <br>Durch das alles kann ich durchgehend eine bestmögliche Betreuung meiner Kunden gewährleisten - was mein Anspruch an mich selbst ist. <br>
-          <br>Werde auch du Teil des Teams und lass mich dir helfen, deine persönlichen Ziele gemeinsam mit mir an deiner Seite zu erreichen. Kontaktiere mich ganz einfach über mein <a href="Kontakt.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Kontaktformular</a>.<br>
-        </p>
-      </div>
-    </section>
-    <section class="u-align-center u-clearfix u-grey-80 u-section-3" id="carousel_abd3">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <div class="u-expanded-width u-list u-list-1">
-          <div class="u-repeater u-repeater-1">
-            <div class="u-align-center u-bottom-right-radius-50 u-container-align-left u-container-style u-custom-border u-grey-80 u-list-item u-repeater-item u-shape-round u-top-right-radius-50 u-list-item-1">
-              <div class="u-container-layout u-similar-container u-container-layout-1"><span class="u-align-left u-file-icon u-icon u-icon-rectangle u-palette-1-base u-text-white u-icon-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><img src="images/6352965-20212c67.png" alt=""></span>
-                <h5 class="u-align-left u-text u-text-default u-text-1">Trainingsphilosophie</h5>
-                <p class="u-align-left u-text u-text-2"> Ich selbst trainiere bereits seit mehreren Jahren und meine Passion war es stets, die beste Version meiner selbst zu werden und so viel wie möglich zu lernen.<br>Dadurch konnte ich dann auch anderen Menschen dabei helfen, dies zu erreichen.&nbsp;
-                </p>
+    <section class="u-align-center u-clearfix u-section-1" id="carousel_4136">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-row">
+              <div class="u-align-left u-container-style u-layout-cell u-size-29 u-layout-cell-1">
+                <div class="u-container-layout u-container-layout-1">
+                  <h2 class="u-custom-font u-font-montserrat u-text u-text-1">Florian Zilk</h2>
+                  <p class="u-custom-font u-font-montserrat u-text u-text-2"> Mein Name ist Flo Zilk und ich bin leidenschaftlicher Athlet und Coach im Bodybuilding Bereich. <br>
+                    <br>
+                    <span style="font-weight: 700;">Seit 2020 coache ich ambitionierte Menschen im Bereich Muskelaufbau, Fettabbau und Wettkampfvorbereitung und führe sie Hand in Hand mit meinem Wissen und meinen Erfahrungen zu ihren persönlichen Zielen.&nbsp;</span>
+                    <br>
+                  </p>
+                </div>
               </div>
-            </div>
-            <div class="u-align-center u-bottom-right-radius-50 u-container-align-left u-container-style u-custom-border u-grey-80 u-list-item u-repeater-item u-shape-round u-top-right-radius-50 u-list-item-2">
-              <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-align-left u-file-icon u-icon u-icon-rectangle u-palette-1-base u-text-white u-icon-2"><img src="images/5462866-7e0e030b.png" alt=""></span>
-                <h5 class="u-align-left u-text u-text-default u-text-3">Ich als Client</h5>
-                <p class="u-align-left u-text u-text-4"> Aktuell werde ich selbst von AJ Morris gecoacht, einem der besten Natural Bodybuilding Coaches weltweit, um meine Fähigkeiten und mein Wissen in dem Bereich Coaching auf das nächste Level zu bringen.<br>
-                </p>
-              </div>
-            </div>
-            <div class="u-align-center u-bottom-right-radius-50 u-container-align-left u-container-style u-custom-border u-grey-80 u-list-item u-repeater-item u-shape-round u-top-right-radius-50 u-list-item-3">
-              <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-align-left u-file-icon u-icon u-icon-rectangle u-palette-1-base u-text-white u-icon-3" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><img src="images/2693002-12f5f41c.png" alt=""></span>
-                <h5 class="u-align-left u-text u-text-default u-text-5">Meine Wettkämpfe</h5>
-                <p class="u-align-left u-text u-text-6"> Im Jahre 2021 stand ich dann schließlich selbst auf einer Bodybuilding Bühne und habe meine erste Wettkampfdiät bestritten. <br>Hiermit konnte ich auch in diesem Bereich sehr wertvolle Erfahrungen für mich und meine Athleten sammeln.&nbsp;<br>
-                </p>
+              <div class="u-align-left u-container-style u-image u-layout-cell u-size-31 u-image-1" data-image-width="5304" data-image-height="6630">
+                <div class="u-container-layout u-valign-bottom u-container-layout-2"></div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="u-align-left u-clearfix u-section-4" id="carousel_d884">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-text u-text-1">Meine Form</h2>
-        <p class="u-custom-font u-font-montserrat u-text u-text-2">“You can do anything you set your mind to.” <br>- Benjamin Franklin
-        </p>
-        <div class="u-expanded-width u-gallery u-layout-horizontal u-lightbox u-show-text-on-hover u-gallery-1" id="carousel-09e2">
-          <div class="u-gallery-inner u-gallery-inner-1" role="listbox"><div class="u-effect-fade u-effect-hover-zoom u-gallery-item u-gallery-item-1"><div class="u-back-slide" data-image-width="4888" data-image-height="6110"><img class="u-back-image" src="images/rsz_flozilk-3.jpg">
-</div><div class="u-over-slide u-shading u-over-slide-1"></div>
-</div><div class="u-effect-fade u-effect-hover-zoom u-gallery-item u-gallery-item-2"><div class="u-back-slide" data-image-width="5081" data-image-height="6351"><img class="u-back-image" src="images/rsz_flozilk-20.jpg">
-</div><div class="u-over-slide u-shading u-over-slide-2"></div>
-</div><div class="u-effect-fade u-effect-hover-zoom u-gallery-item u-gallery-item-3"><div class="u-back-slide" data-image-width="5304" data-image-height="6630"><img class="u-back-image" src="images/rsz_flozilk-30.jpg">
-</div><div class="u-over-slide u-shading u-over-slide-3"></div>
-</div><div class="u-effect-fade u-effect-hover-zoom u-gallery-item u-gallery-item-4"><div class="u-back-slide" data-image-width="5304" data-image-height="6630"><img class="u-back-image" src="images/rsz_flozilk-28.jpg">
-</div><div class="u-over-slide u-shading u-over-slide-4"></div>
-</div><div class="u-effect-fade u-effect-hover-zoom u-gallery-item u-gallery-item-5"><div class="u-back-slide" data-image-width="3360" data-image-height="5040"><img class="u-back-image" src="images/rsz__mg_0615.jpg">
-</div><div class="u-over-slide u-shading u-over-slide-5"></div>
-</div><div class="u-effect-fade u-effect-hover-zoom u-gallery-item u-gallery-item-6"><div class="u-back-slide" data-image-width="4000" data-image-height="6000"><img class="u-back-image" src="images/rsz__mg_0624.jpg">
-</div><div class="u-over-slide u-shading u-over-slide-6"></div>
-</div><div class="u-effect-fade u-effect-hover-zoom u-gallery-item u-gallery-item-7" data-image-width="3743" data-image-height="5615"><div class="u-back-slide"><img class="u-back-image" src="images/rsz__mg_0628.jpg">
-</div><div class="u-over-slide u-shading u-over-slide-7"></div>
-</div></div>
-          <a class="u-absolute-vcenter u-gallery-nav u-gallery-nav-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-white u-gallery-nav-1" href="#" role="button">
-            <span aria-hidden="true">
-              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-            </span>
-            <span class="sr-only">
-              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-            </span>
-          </a>
-          <a class="u-absolute-vcenter u-gallery-nav u-gallery-nav-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-white u-gallery-nav-2" href="#" role="button">
-            <span aria-hidden="true">
-              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-            </span>
-            <span class="sr-only">
-              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-            </span>
-          </a>
+    <section class="u-align-left u-clearfix u-section-2" id="sec-3ae6">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
+          <p id="isPasted">Ich selbst trainiere bereits seit mehreren Jahren und meine Passion war es stets, die beste Version meiner selbst zu werden und so viel wie möglich zu lernen. Dadurch konnte ich dann auch anderen Menschen dabei helfen, dies zu erreichen.&nbsp;</p>
+          <p>Durch jahrelanges Selbststudium, in denen ich viele Sachen an mir selbst immer wieder ausprobiert habe und mich zusätzlich durchgehend selbst coachen lassen habe, hat sich mein Horizont enorm erweitert.&nbsp;</p>
+          <p>Aktuell werde ich selbst von AJ Morris gecoacht, einem der besten Natural Bodybuilding Coaches weltweit, um meine Fähigkeiten und mein Wissen in dem Bereich Coaching auf das nächste Level zu bringen.</p>
+          <p>Im Jahre 2021 stand ich dann schließlich selbst auf einer Bodybuilding Bühne und habe meine erste Wettkampfdiät bestritten. Hiermit konnte ich auch in diesem Bereich sehr wertvolle Erfahrungen für mich und meine Athleten sammeln.&nbsp;</p>
+          <p>Indem ich die Trainer Ausbildung zum lizenzierten Diplom Strength Coach im "Das Gym" in Wien absolvierte und eine weitere bevorstehende Ausbildung zum lizenzierten Ernährungsberater durch die Mac Nutrition University absolviere, bin ich in der Lage, meinen Mitgliedern in meinem Coaching Team stets mit dem besten und aktuellsten Wissen in den Bereichen Training und Ernährung weiterzuhelfen.&nbsp;</p>
+          <p>Durch das alles kann ich durchgehend eine bestmögliche Betreuung meiner Kunden gewährleisten - was mein Anspruch an mich selbst ist.&nbsp;</p>
+          <p>Werde auch du Teil des Teams und lass mich dir helfen, deine persönlichen Ziele gemeinsam mit mir an deiner Seite zu erreichen.</p>
+        </div>
+      </div>
+    </section>
+    <section class="u-align-center u-clearfix u-section-3" id="carousel_a887">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
+          <div class="u-gallery-inner u-gallery-inner-1">
+            <div class="u-effect-fade u-gallery-item">
+              <div class="u-back-slide" data-image-width="4829" data-image-height="6036">
+                <img class="u-back-image u-expanded" src="np://user.desktop.nicepage.com/Site_525904919/images/rsz_flozilk-40.jpg?rand=3d3e">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-1"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item">
+              <div class="u-back-slide" data-image-width="5304" data-image-height="6630">
+                <img class="u-back-image u-expanded" src="np://user.desktop.nicepage.com/Site_525904919/images/rsz_flozilk-30.jpg?rand=9656">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-2"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item">
+              <div class="u-back-slide" data-image-width="946" data-image-height="1181">
+                <img class="u-back-image u-expanded" src="np://user.desktop.nicepage.com/Site_525904919/images/66896e39-f618-4bac-8e70-e5db4c21fe9c.jfif?rand=2a76">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-3"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="u-align-center u-clearfix u-section-4" id="sec-5589">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
+          <div class="u-gallery-inner u-gallery-inner-1">
+            <div class="u-effect-fade u-gallery-item">
+              <div class="u-back-slide" data-image-width="3743" data-image-height="5615">
+                <img class="u-back-image u-expanded" src="np://user.desktop.nicepage.com/Site_525904919/images/rsz__mg_0628.jpg?rand=be88">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-1"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item">
+              <div class="u-back-slide" data-image-width="4000" data-image-height="6000">
+                <img class="u-back-image u-expanded" src="np://user.desktop.nicepage.com/Site_525904919/images/rsz__mg_0624.jpg?rand=772e">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-2"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item">
+              <div class="u-back-slide" data-image-width="3360" data-image-height="5040">
+                <img class="u-back-image u-expanded" src="np://user.desktop.nicepage.com/Site_525904919/images/rsz__mg_0615.jpg?rand=f8a8">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-3"></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -199,7 +188,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               <div class="u-align-center-sm u-align-right-md u-container-style u-layout-cell u-size-20 u-size-30-md u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246">
-                    <img src="images/Zilk_Coaching_WEISS.png" class="u-logo-image u-logo-image-1">
+                    <img src="np://user.desktop.nicepage.com/Site_525904919/images/Zilk_Coaching_WEISS.png?rand=5592" class="u-logo-image u-logo-image-1">
                   </a>
                 </div>
               </div>
