--- a/Kontakt.html
+++ b/Kontakt.html
@@ -18,7 +18,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "zilkcoaching",
-		"logo": "images/Zilk_Coaching_WEISS.png",
+		"logo": "np://user.desktop.nicepage.com/Site_525904919/images/Zilk_Coaching_WEISS.png?rand=3606",
 		"sameAs": [
 				"https://www.instagram.com/flo_zilk/",
 				"https://www.instagram.com/flo_zilk/"
@@ -31,7 +31,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-xl-mode" data-lang="de"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-80 u-header u-header" id="sec-cdb9"><div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246">
-          <img src="images/Zilk_Coaching_WEISS.png" class="u-logo-image u-logo-image-1">
+          <img src="np://user.desktop.nicepage.com/Site_525904919/images/Zilk_Coaching_WEISS.png?rand=3606" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="@flo_zilk" target="_blank" href="https://www.instagram.com/flo_zilk/"><span class="u-icon u-social-icon u-social-instagram u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4047"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-4047"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
@@ -77,11 +77,8 @@
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-container-align-center u-container-style u-image u-layout-cell u-size-20-lg u-size-20-xl u-size-60-md u-size-60-sm u-size-60-xs u-image-1" data-image-width="3360" data-image-height="5040">
-                <div class="u-container-layout u-container-layout-1"></div>
-              </div>
-              <div class="u-container-align-center u-container-style u-layout-cell u-size-40-lg u-size-40-xl u-size-60-md u-size-60-sm u-size-60-xs u-white u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2">
+              <div class="u-container-align-center u-container-style u-layout-cell u-size-60 u-white u-layout-cell-1">
+                <div class="u-container-layout u-container-layout-1">
                   <div class="u-form u-form-1">
                     <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-15 u-form-vertical u-inner-form" source="email" name="form" style="padding: 28px;">
                       <p class="u-align-center u-form-group u-form-text u-text u-text-1"> Kontaktiere mich einfach über dieses Formular. Ich freue mich darauf mit dir zu arbeiten!</p>
@@ -110,7 +107,7 @@
                       <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
                       <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
                       <input type="hidden" value="" name="recaptchaResponse">
-                      <input type="hidden" name="formServices" value="9c9ae472a80f9bd15cd45c76a846ec4c">
+                      <input type="hidden" name="formServices" value="033fb0e0-8d04-2936-84f3-29cce6b612b7">
                     </form>
                   </div>
                 </div>
@@ -145,7 +142,7 @@
               <div class="u-align-center-sm u-align-right-md u-container-style u-layout-cell u-size-20 u-size-30-md u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246">
-                    <img src="images/Zilk_Coaching_WEISS.png" class="u-logo-image u-logo-image-1">
+                    <img src="np://user.desktop.nicepage.com/Site_525904919/images/Zilk_Coaching_WEISS.png?rand=5592" class="u-logo-image u-logo-image-1">
                   </a>
                 </div>
               </div>
