--- a/Service.html
+++ b/Service.html
@@ -17,7 +17,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "zilkcoaching",
-		"logo": "images/Zilk_Coaching_WEISS.png",
+		"logo": "np://user.desktop.nicepage.com/Site_525904919/images/Zilk_Coaching_WEISS.png?rand=3606",
 		"sameAs": [
 				"https://www.instagram.com/flo_zilk/",
 				"https://www.instagram.com/flo_zilk/"
@@ -30,7 +30,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-xl-mode" data-lang="de"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-80 u-header u-header" id="sec-cdb9"><div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246">
-          <img src="images/Zilk_Coaching_WEISS.png" class="u-logo-image u-logo-image-1">
+          <img src="np://user.desktop.nicepage.com/Site_525904919/images/Zilk_Coaching_WEISS.png?rand=3606" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="@flo_zilk" target="_blank" href="https://www.instagram.com/flo_zilk/"><span class="u-icon u-social-icon u-social-instagram u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4047"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-4047"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
@@ -99,7 +99,7 @@
               <div class="u-align-center-sm u-align-right-md u-container-style u-layout-cell u-size-20 u-size-30-md u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246">
-                    <img src="images/Zilk_Coaching_WEISS.png" class="u-logo-image u-logo-image-1">
+                    <img src="np://user.desktop.nicepage.com/Site_525904919/images/Zilk_Coaching_WEISS.png?rand=5592" class="u-logo-image u-logo-image-1">
                   </a>
                 </div>
               </div>
