--- a/Results.html
+++ b/Results.html
@@ -19,7 +19,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "zilkcoaching",
-		"logo": "np://user.desktop.nicepage.com/Site_2706626582/images/Zilk_Coaching_SCHWARZ.png?rand=4f16"
+		"logo": "images/Zilk_Coaching_SCHWARZ.png"
 }</script>
     <meta name="theme-color" content="#ffa500">
     <meta property="og:title" content="Results">
@@ -28,7 +28,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-xl-mode" data-lang="de"><header class="u-clearfix u-header u-sticky u-header" id="sec-cdb9"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="13486" data-image-height="4841" title="Startseite">
-          <img src="np://user.desktop.nicepage.com/Site_2706626582/images/Zilk_Coaching_SCHWARZ.png?rand=4f16" class="u-logo-image u-logo-image-1">
+          <img src="images/Zilk_Coaching_SCHWARZ.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="MD">
           <div class="menu-collapse" style="font-size: 1.125rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 500;">
@@ -70,7 +70,7 @@
     
     <footer class="u-clearfix u-footer u-grey-80" id="sec-44c2"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246">
-          <img src="np://user.desktop.nicepage.com/Site_2706626582/images/Zilk_Coaching_WEISS.png?rand=1472" class="u-logo-image u-logo-image-1">
+          <img src="images/Zilk_Coaching_WEISS.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse">
